<resources>

    <string name="app_name">Earn Money</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="cash_box">Cash Box</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="login_title">Login to Your \n Account</string>
    <string name="forget_password">Forget Password?</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_your_password">Enter Your Password</string>

</resources>
