<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="login"
            type="com.tzp.earnmoney.viewmodel.LoginViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:context="com.tzp.earnmoney.view.ui.auth.LoginFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header_title"
            style="@style/HeaderTvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/loading"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loti" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_email"
            style="@style/SimpleTvStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10dp"
            android:text="@string/email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            style="@style/EdittextStyle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5dp"
            android:text="@={login.email}"
            android:layout_marginEnd="20sp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/enter_user_name"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_pass"
            style="@style/SimpleTvStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5dp"
            android:text="@string/password" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20sp"
            android:dividerPadding="0dp"
            app:boxCollapsedPaddingTop="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/appColor">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_pass"
                style="@style/EdittextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{login.password}"
                android:drawableStart="@drawable/ic_password_drawable"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_toast"
            style="@style/SimpleTvStyle"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5dp"
            android:text="@string/password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/butLogin"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20sp"
            android:text="@string/login" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forgetPass"
            style="@style/SimpleTvStyleForForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forget_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/butRegistration"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20sp"
            android:text="@string/registration" />

    </LinearLayout>
</layout>